succesfully completed the workflow run execution